--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,11 +5,19 @@
     <string name="myfriendlist">我的朋友上線清單</string>
     <string name="title_activity_maps">MyeMap</string>
     <string name="open">打開</string>
+
+
+
     <string name="write_external_storage_denied">沒有權限</string>
-    <string name="myposition">我的位置</string>
     <string name="google_play_service_missing">沒有安裝 Google Play Service</string>
+
     <string name="menu_current_posit">目前位置</string>
     <string name="menu_send_msg">發送訊息</string>
     <string name="menu_find_address">尋找住址</string>
     <string name="menu_main">主選單</string>
+
+    <string name="lbl_my_position">我的位置</string>
+    <string name="lbl_real_posit">實時定位</string>
+    <string name="lbl_on">開</string>
+    <string name="lbl_off">關</string>
 </resources>
